--- a/research/bkk/mvol.html
+++ b/research/bkk/mvol.html
@@ -3,6 +3,40 @@
 <title>Mixed volume</title>
 <style>
 
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;   
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: #4CAF50;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #4CAF50;
+  cursor: pointer;
+}
+
 rect {
   fill: white;
 }
@@ -33,9 +67,13 @@ rect {
     <svg width="960" height="500" id="canvas"></svg>
     <br/>
     <label>lambda_1</label>
-    <input type="range" min="30" max="120" value="80" id="scale1">
+    <div class="slidercontainer">
+      <input type="range" min="30" max="120" value="100" class="slider" id="scale1">
+    </div>
     <label>lambda_2</label>
-    <input type="range" min="30" max="100" value="80" id="scale2">
+    <div class="slidercontainer">
+      <input type="range" min="30" max="100" value="80" class="slider" id="scale2">
+    </div>
     <label class="switch">
         <input type="checkbox" id="showarea">
         Show area
@@ -81,9 +119,9 @@ let sMB = undefined;
 
 let oA  = svg.append("path").attr("class", "A");    // outline of A
 let oB  = svg.append("path").attr("class", "B");    // outline of B
+let oM  = svg.append("path").attr("class", "hull"); // outline of A+B
 let oMA = svg.append("path").attr("class", "A");    // outline of A in A+B
 let oMB = svg.append("path").attr("class", "B");    // outline of B in A+B
-let oM  = svg.append("path").attr("class", "hull"); // outline of A+B
 
 update();
 
