Working on MAAG talk

--- a/research/maag-2019/index.html
+++ b/research/maag-2019/index.html
@@ -305,8 +305,8 @@ title: DAG decomposition
         </p>
         <p>
             \[
-                P(G) \;:=\;
-                \text{conv} \{ \mathbf{e}_i - \mathbf{e}_j \mid \{i,j\} \in \mathcal{E}(G) \}
+                \nabla_G \;:=\;
+                \text{conv} \{ \pm(\mathbf{e}_i - \mathbf{e}_j) \mid \{i,j\} \in \mathcal{E}(G) \}
             \]
             where $\mathbf{e}_0 = \mathbf{0}$.
         </p>
