Working on MAAG talk

--- a/research/maag-2019/index.html
+++ b/research/maag-2019/index.html
@@ -579,7 +579,7 @@ title: DAG decomposition
         </p>
     </div>
     <div class="mcols">
-        <div class="col3">
+        <div class="col4">
             <svg width="300" height="200">
                 <path fill="none" stroke="black" d="M 100 50 L 20 150 L 180 150 Z"></path>
                 <g transform="translate(100,50)">
@@ -596,7 +596,7 @@ title: DAG decomposition
                 </g>
             </svg>
         </div>
-        <div class="col3">
+        <div class="col4">
             <table class="fragment">
                 <tr>
                     <td>$\pm(\mathbf{e}_0 - \mathbf{e}_1)$</td>
@@ -609,9 +609,26 @@ title: DAG decomposition
                 </tr>
             </table>
         </div>
-        <div class="col3"></div>
-
+        <div class="col4">
+            <svg width="240" height="240" class="fragment">
+                <g transform="scale(0.8,-0.8) translate(105,-105)">
+                    <polygon 
+                        points="-100,0 0,-100 100,-100 100,0 0,100 -100,100"
+                        class="shape2" />
+                </g>
+            </svg>
+        </div>
     </div>
+</section>
+<section>
+    <p></p>
+    <p>
+        <b class="alert">Symmetric edge polytope</b>:
+        Matsui, Higashitani, Nagazawa, Ohsugi, Hibi. 
+        Roots of Ehrhart polynomials arising from graphs. 
+        J. Algebr. Comb. 2011
+    </p>
+    <p></p>
 </section>
 <section>
     <div class="theorem">
