Updating Matlab "structures" lecture

--- a/teaching/matlab/lecture-structure.html
+++ b/teaching/matlab/lecture-structure.html
@@ -28,10 +28,10 @@ title: Cell arrays
 
     <p class="fragment">
         Use { } for empty cell arrays:
-        <pre><code>
-            C = {};
-        </code></pre>
     </p>
+    <pre class="fragment"><code>
+        C = {};
+    </code></pre>
 
     <p class="fragment">
         The "cell" function can create array of any size.
@@ -51,7 +51,7 @@ title: Cell arrays
         </li>
     </ul>
     <p class="fragment">
-        Syntax for indexing expressions are the same as that for arrays.
+        Syntax for indexing is the same as that for arrays.
     </p>
 </section>
 <section>
@@ -70,7 +70,7 @@ title: Cell arrays
         s.height = 200;
     </code></pre>
     <p class="fragment">
-        Compare these concepts: Arrays, Cell arrays, Structure arrays.
+        Compare these concepts: Arrays, cell arrays, Structures.
     </p>
 </section>
 <section>
@@ -87,7 +87,7 @@ title: Cell arrays
 
     <p class="fragment">
         The <code>structure</code>
-        can create structures of any size.
+        function can be used to create structures of any size.
     </p>
 </section>
 <section>
