Working on MAAG talk

--- a/research/maag-2019/index.html
+++ b/research/maag-2019/index.html
@@ -628,7 +628,12 @@ title: DAG decomposition
         Roots of Ehrhart polynomials arising from graphs. 
         J. Algebr. Comb. 2011
     </p>
-    <p></p>
+    <p>
+        <b class="alert">Fundamental polytope</b>:
+        Delucchi & Hoessly
+        Fundamental polytopes of metric trees
+        via parallel connections of matroids 2019
+    </p>
 </section>
 <section>
     <div class="theorem">
