Working on MAAG talk

--- a/research/maag-2019/index.html
+++ b/research/maag-2019/index.html
@@ -619,20 +619,34 @@ title: DAG decomposition
             </svg>
         </div>
     </div>
+        <p class="fragment">
+            Convex hull of the union of the Newton polytopes
+        </p>
 </section>
 <section>
-    <p></p>
+    <table>
+        <tr>
+            <td>
+            Adjacency polytopes<br>
+            for complete graphs
+            </td>
+            <td>
+                $\longrightarrow$
+            </td>
+            <td>
+                Root system polytopes
+            </td>
+        </tr>
+    </table>
     <p>
         <b class="alert">Symmetric edge polytope</b>:
         Matsui, Higashitani, Nagazawa, Ohsugi, Hibi. 
-        Roots of Ehrhart polynomials arising from graphs. 
-        J. Algebr. Comb. 2011
+        <span class="emph gray"> 2011 </span>
     </p>
     <p>
         <b class="alert">Fundamental polytope</b>:
         Delucchi & Hoessly
-        Fundamental polytopes of metric trees
-        via parallel connections of matroids 2019
+        <span class="emph gray"> 2019 </span>
     </p>
 </section>
 <section>
